--- a/static/css/oi/default/queues.css
+++ b/static/css/oi/default/queues.css
@@ -46,6 +46,18 @@
     color: red;
 }
 
+table#covers span.add {
+    background-color: palegreen;
+}
+
+table#covers span.delete {
+    background-color: tomato;
+}
+
+table#covers span.modify {
+    background-color: yellow;
+}
+
 .queues form {
     margin: 0;
     padding: 0;
